# adventofcode

./: .gitignore  .gitmodules  Cargo.toml  README.md  template.rs
.github/workflows/: rust.yml
2015/py/: 01.py  02.ipynb  03.ipynb  04.py  05.py  06.py  06b.py  07.py
2016/: Cargo.toml  template.rs
2018/: Cargo.toml
2018/src/: bisection_search.rs  matrix.rs
2019/: Cargo.toml
2019/src/: intcode.rs  lib.rs  matrix.rs  shortest_path.rs
2020/: Cargo.toml
2020/j/: dec05.md
2020/src/: matrix.rs
2021/: Cargo.toml
2021/aoc_2021_01/: Cargo.toml
2021/aoc_2021_01/src/: main.rs
2021/aoc_2021_02/: Cargo.toml
2021/aoc_2021_02/src/: main.rs
2021/aoc_2021_03/: Cargo.toml
2021/aoc_2021_03/src/: main.rs
2022/: Cargo.toml  template.rs
2022/2022_19/: Cargo.toml
2022/2022_20/: Cargo.toml
2022/2022_20/proptest-regressions/: main.txt
2022/2022_20/src/: main.rs  modint.rs
2023/: Cargo.toml  template.rs
2025/: Cargo.toml
aoclib/: Cargo.toml
aoclib/proptest-regressions/: heap.txt
aoclib/src/: heap.rs  input.rs  lib.rs  matrix.rs  point.rs  range.rs  shortest_path.rs  split_one.rs
aoclib/tests/: matrix.rs
j/: dec05.ijs  dec05.md
src/: lib.rs  point.rs  split_one.rs
