[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Martin Pool <mbp@sourcefrog.net>"]
edition = "2018"
description = "My solutions to https://adventofcode.com/2020"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
