[package]
name = "mbp-aoc2016"
version = "0.1.0"
authors = ["Martin Pool <mbp@sourcefrog.net>"]
edition = "2018"
description = "My solutions to https://adventofcode.com/2016"
readme = "README.md"
publish = false
license = "Apache-2.0"

[dependencies]
concurrent-queue = "1.2.2"
crossbeam = "0.8.1"
md5 = "0.7.0"
num_cpus = "1.13"
nom = "7.0"
proptest = "1.0"
