[package]
name = "mbpaoc2019"
version = "0.1.0"
authors = ["Martin Pool <mbp@sourcefrog.net>"]
edition = "2018"
description = "Solutions to https://adventofcode.com/2019"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
bytecount = "0.6.0"
modinverse = "0.1.1"
num-integer = "0.1"
console = "0.9.1"
pest = "2.1.2"
pest_derive = "2.1"
nom = "7"

[dependencies.aoclib]
path = "../aoclib"
