[package]
name = "mbpaoc2021"
version = "0.1.0"
edition = "2018"

[dependencies]
bitvec = "1.0"
itertools = "0.10"
ndarray = "0.15"
regex = "1.7"
similar = "2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.aoclib]
path = "../aoclib"
