[package]
name = "mbpaoc2023"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ascii = "1.1"
bitvec = "1.0"
indoc = "*"
itertools = "0.10"
num-integer = "0.1"
num-prime = "0.4"
regex = "1.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.aoclib]
path = "../aoclib"
