[package]
name = "aoclib"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25"
strum_macros = "0.25"

[dev-dependencies.proptest]
version = "1"
features = ["std"]
default-features = false
